# VEC_Web_Engine

./: .gitignore  LICENSE  README.md  endpoints.md  iic.json  package-lock.json  package.json  tailwind.config.js
Backend/: .env  .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
Backend/Chatbot/controller/: chatbotController.js
Backend/Chatbot/data/: data.txt
Backend/Chatbot/routes/: chatbot.js
Backend/Chatbot/utils/: getTopDoc.js
Backend/Hostel/config/: aws.js  session.js  storage.js
Backend/Hostel/middleware/: s3PathResolver.js  uploadMiddleware.js  uploadTos3Middleware.js
Backend/Hostel/routes/: auth.js
Backend/backend/: package-lock.json  server.js
Backend/chatbot/: app.py  bm25_model.joblib  data.txt  requirement.txt
Backend/chatbotv7/: app.py  data.txt  tfidf_model.joblib
Backend/config/: db.js
Backend/controllers/: NNYClubeController.js  adminController.js  departmentController.js  intakeController.js  libraryController.js  overallResearchController.js  secondnavbarController.js  staffprofileController.js  wardenControllers.js
Backend/database/: aws.py  production.py  test.py
Backend/docs/: about_us.json  academics.json  accreditations_and_ranking.json  administration.json  admissions.json  exams.json  gallery.json  help_desk.json  incubation.json  landing_page_details.json  library.json  nss.json  placement.json  research.json  sidebar.json  sports_data.json  web_team.json
Backend/routes/: NNYClub.js  admin.js  events.js  library.js  overallResearch.js  secondnavbar.js  staffRoutes.js  wardens.js
(+1129 files in other folders)
