[project]
name = "velammal-engineering-college-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymongo>=4.13.2",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "xlrd>=2.0.2",
]
